force-app/main/default/objects/PreviousWar__c/PreviousWar__c.object-meta.xml
<CustomObject>
    <label>PreviousWar</label>
    <pluralLabel>PreviousWars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>PreviousWar Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>