force-app/main/default/objects/PreviousWar__c/fields/Original_attacker__c.field-meta.xml
<CustomField>
    <fullName>Original_attacker__c</fullName>
    <label>Original attacker</label>
    <type>Text</type>
    <length>255</length>
</CustomField>