force-app/main/default/objects/PreviousWar__c/fields/Original_defender__c.field-meta.xml
<CustomField>
    <fullName>Original_defender__c</fullName>
    <label>Original defender</label>
    <type>Text</type>
    <length>255</length>
</CustomField>